JG-2003-02-12-0  Enhancem.  Disabled hashing by job onwner in schedd's job list
                            - it doesn't give the expected performance 
                            improvement.

AA-2003-02-11-0  Bugfix:    qmon crash fixed for pressing Why ? when several
                            jobs are selected.
                 Changed:   qmon
                 Bugtraq:   4816529
                 IZ:        #490

JG-2003-02-11-0  Enhancem.  Improved ineffective implementation of removing 
                            entries in nonunique hashtables.
                            Added a test program for cull_hash.
                 Review:    EB

AS-2003-02-10-1  Bugfix:    scripts/util/arch: backed out hp11-64 and aix51
                            detection since no port available yet
                 IZ:        #486
                 
AS-2003-02-10-0  Changed:   libs/gdi/version.c: set version to 5.3p3

CR-2003-02-07-1  Bugfix:    Compile warnings for ALINUX fixed

CR-2003-02-07-0  Enhancem.: Modified qevent client for testsuite throughput
                            test

EB-2003-02-07-0  Bugfix:    Optimization in scheduler which will have an
                            effect if maxujobs != 0 and many different users
                            submit jobs.
                 Changed:   sge_schedd
                 Review:    AH

JG-2003-02-07-0  Bugfix:    Optimization in creation of new cull hashtables.
                 Changed:   sge_schedd (all)
                 Review:    EB

CR-2003-02-05-3  L10N:      Removed unused message macro (ID:15004)
                            "qrsh_starter: cannot read environment variable"
                 Changed:   msg_qrsh.h

EB-2003-02-05-0: Bugfix:    qstat -r shows wrong dependencies
                 IZ:        #478
                 Bugtraq:   #4813188
                 Changed:   qstat

CR-2003-02-05-0: Enhancem.: Modified qevent demo client for testsuite 
                            throughput test compatibility
