@@ -1,3 +1,10 @@
+EB-2003-02-13-0  Enhancem.: Added PROFILE parameter to qmaster_params.
+                            Addtional logging concerning spooling in qmaster.
+                 Changed:   sge_qmaster 
+                 Review:    AH
+                 Note:      New code is not enabled per default!
+                            Compile with: ./aimk -DPROFILE_MASTER 
+
 JG-2003-02-12-0  Enhancem.  Disabled hashing by job onwner in schedd's job list
                             - it doesn't give the expected performance 
                             improvement.
